--- a/index.html
+++ b/index.html
@@ -258,9 +258,9 @@
 								<p>My primary aim is to advance my skills and knowledge. My expertise are in Data Structures and Algorithms, problem-solving, and C++. I aspire to apply these skills innovatively to contribute to the growth of the organization. Additionally, I am dedicated to staying updated with the latest technologies.</p>
 								<ul class="about-info mt-4 px-md-0 px-2">
 									<li class="d-flex"><span>Profile:</span> <span>Computer Science Student</span></li>
-									<li class="d-flex"><span>Education:</span> <span>Bachelor of Engineering</span></li>
+									<li class="d-flex"><span>Education:</span> <span>Bachelor of Technology</span></li>
 									<li class="d-flex"><span>Language:</span> <span>English, Hindi</span></li>
-									<li class="d-flex"><span>Other Skills:</span> <span>Data Analytics, html &amp; CSS</span></li>
+									<li class="d-flex"><span>Other Skills:</span> <span>Object Oriented Programming, html &amp; CSS, Networking</span></li>
 									<li class="d-flex"><span>Interest:</span> <span>Exploring new technologies</span></li>
 									
 								</ul>
@@ -446,7 +446,6 @@
 					  <li class="ftco-animate"><a href="www.linkedin.com/in/unnati-rajpoot-418739239"><span class="icon-linkedin"></span></a></li>  
 					  <li class="ftco-animate"><a href="https://www.facebook.com/unnati.rajpoot.75?mibextid=ZbWKwL"><span class="icon-facebook"></span></a></li>
 				      <li class="ftco-animate"><a href="https://www.instagram.com/unnatirajpoot?igsh=MWozd2J4OTd5NDQwNg=="><span class="icon-instagram"></span></a></li>
-					  <li class="ftco-animate"><a href="https://www.snapchat.com/add/unnati_rajpoot2?share_id=7isEQaQMtVA&locale=en-GB"><span class="icon-snapchat"></span></a></li>
 					</ul>
 				<br>
 		   </div>
