--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
     			<div class="col-md-6">
     				<div class="resume-wrap ftco-animate">
     					<span class="date">2021-2025</span>
-    					<h2>Bachelor of Engineering</h2>
+    					<h2>Bachelor of Technology</h2>
     					<span class="position">Galgotias University</span>
 						<p class="mt-4">Grade: Current CGPA 9.27</p>
     				</div>
